07 Promjene u datoteci i modelu
Promijenjena datoteka u UTF-8 format.
Mali preinake nad modelom Student

--- a/Software/GenetskiAlgoritamSastavljanjaRasporeda/GenetskiAlgoritamSastavljanjaRasporeda/GenetskiAlgoritamSastavljanjaRasporeda.csproj
+++ b/Software/GenetskiAlgoritamSastavljanjaRasporeda/GenetskiAlgoritamSastavljanjaRasporeda/GenetskiAlgoritamSastavljanjaRasporeda.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\Singleton\Data.cs" />
+    <Compile Include="Controller\FactoryMethod\AbstractFactory.cs" />
+    <Compile Include="Controller\FactoryMethod\ConcreteCreator\StudentConcreteCreator.cs" />
+    <Compile Include="Controller\FactoryMethod\ConcreteProduct\StudentConcreteProduct.cs" />
+    <Compile Include="Controller\FactoryMethod\DatotekaCreator.cs" />
+    <Compile Include="Controller\FactoryMethod\DatotekaProduct.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
