--- a/Software/GenetskiAlgoritamSastavljanjaRasporeda/GenetskiAlgoritamSastavljanjaRasporeda/GenetskiAlgoritamSastavljanjaRasporeda.csproj
+++ b/Software/GenetskiAlgoritamSastavljanjaRasporeda/GenetskiAlgoritamSastavljanjaRasporeda/GenetskiAlgoritamSastavljanjaRasporeda.csproj
@@ -48,9 +48,11 @@
   <ItemGroup>
     <Compile Include="Controller\FactoryMethod\ConcreteCreator\DvoranaConcreteCreator.cs" />
     <Compile Include="Controller\FactoryMethod\ConcreteCreator\KolegijConcreteCreator.cs" />
+    <Compile Include="Controller\FactoryMethod\ConcreteCreator\KolokvijConcreteCreator.cs" />
     <Compile Include="Controller\FactoryMethod\ConcreteCreator\ProfesorConcreteCreator.cs" />
     <Compile Include="Controller\FactoryMethod\ConcreteProduct\DvoranaConcreteProduct.cs" />
     <Compile Include="Controller\FactoryMethod\ConcreteProduct\KolegijConcreteProduct.cs" />
+    <Compile Include="Controller\FactoryMethod\ConcreteProduct\KolokvijConcreteProduct.cs" />
     <Compile Include="Controller\FactoryMethod\ConcreteProduct\ProfesorConcreteProduct.cs" />
     <Compile Include="Controller\Singleton\Data.cs" />
     <Compile Include="Controller\FactoryMethod\AbstractFactory.cs" />
