--- a/Software/GenetskiAlgoritamSastavljanjaRasporeda/GenetskiAlgoritamSastavljanjaRasporeda/packages.config
+++ b/Software/GenetskiAlgoritamSastavljanjaRasporeda/GenetskiAlgoritamSastavljanjaRasporeda/packages.config
@@ -3,4 +3,5 @@
   <package id="Accord" version="3.8.0" targetFramework="net472" />
   <package id="Accord.Genetic" version="3.8.0" targetFramework="net472" />
   <package id="Accord.Math" version="3.8.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
 </packages>
